[package]
name = "rxvm-sys"
version = "1.0.0"
description = "Bindings for the RandomX C++ implementation"
authors = ["Jeeyong Um <conr2d@proton.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/conr2d/rxvm.git"
documentation = "https://docs.rs/rxvm-sys"
keywords = ["bindings", "randomx"]
categories = ["external-ffi-bindings"]

[build-dependencies]
bindgen = "0.71"
cmake = "0.1"
